fix: all 6 issues - multi-quadrant search, region scan, delay 20s, no empty cache, full error logging